# stock

./: .gitignore  pyproject.toml
data/: instockdb  instockdb.duckdb
front/: package-lock.json  package.json
instock/core/: singleton_stock_web_module_data.py  tablestructure.py  web_module_data.py
instock/core/indicator/: calculate_indicator.py
instock/core/kline/: visualization.py
instock/core/pattern/: pattern_recognitions.py
instock/job/: indicators_data_daily_job.py  init_job.py
instock/lib/: database.py  duckdb_database.py
instock/web/: dataIndicatorsHandler.py  dataTableHandler.py  web_service.py
instock/web/templates/: stock_web.html
tests/: test_duckdb.py
