[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "py-mini-racer==0.6.0",
    "arrow==1.3.0",
    "bokeh==3.6.0",
    "PyMySQL==1.1.1",
    "requests==2.32.3",
    "Logbook==1.8.0",
    "SQLAlchemy==2.0.36",
    "tornado==6.4.1",
    "tqdm==4.67.0",
    "easytrader==0.23.0",
    "beautifulsoup4==4.12.3",
    "pycryptodome==3.21.0",
    "python-dateutil==2.9.0.post0",
    "TA-Lib @ file:///${PROJECT_ROOT}/lib/TA_Lib-0.4.28-cp311-cp311-win_amd64.whl",
    "duckdb>=1.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
